# gbg-gis

./: .gitignore  gbgqgis.qgz  pyproject.toml  setup_postgis.sh
config/: db.yaml  maps.yaml  shortest.yaml
scripts/: combine_shortest.py  demo_routing.py  fetch_pbf.py  run_routing.py  setup_postgis.sh
src/gbg_gis/: download_map.py  load_from_file.py  routing.py
